--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "cookies-next": "^4.1.1",
     "next": "14.1.1",
