--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^5.3.3",
     "cookies-next": "^4.1.1",
     "next": "14.1.1",
+    "next-cookies": "^2.0.3",
     "react": "^18",
     "react-dom": "^18",
     "swiper": "^11.1.0"
