--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@mui/material": "^5.15.11",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
-    "cookies-next": "^4.1.1",
+    "cookies-next": "^4.3.0",
+    "js-cookie": "^3.0.5",
     "next": "14.1.1",
     "next-cookies": "^2.0.3",
     "react": "^18",
@@ -33,6 +34,7 @@
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
     "@types/jest": "^29.5.12",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
