--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^5.3.3",
     "cookies-next": "^4.3.0",
     "next": "14.1.1",
+    "next-auth": "^4.24.10",
     "next-cookies": "^2.0.3",
     "react": "^18",
     "react-dom": "^18",
